# PersonalFinanceManager

./: .gitignore  CMakeLists.txt  README.md  hutils.h  main.cpp  todo.md
AuthenticationModule/: AuthenticationModule.cpp  AuthenticationModule.h
ControlModule/: ControlModule.cpp  ControlModule.h
DataManagementModule/: DataManagementModule.cpp  DataManagementModule.h
UIModule/: CMakeLists.txt  DonutBreakdownChart.cpp  DonutBreakdownChart.h  DonutBreakdownMainSlice.cpp  DonutBreakdownMainSlice.h  entrancewindow.cpp  entrancewindow.h  entrancewindow.ui  main.cpp  registerwindow.cpp  registerwindow.h  registerwindow.ui  stackedwindows.cpp  stackedwindows.h  stackedwindows.ui
UIModule/.cache/clangd/index/: entrancewindow.h.63E9E404EECD77AC.idx
UIModule/DataManagementModule/: DataManagementModule.cpp  DataManagementModule.h
test/: CMakeLists.txt  TestDataManagementModule.cpp  unit_test.cpp
